--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.5em;
     top: 15%;
-    background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
+    background: linear-gradient(to right, let(--gradient-start), let(--gradient-end));
 }
 
 h1 {
