--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h4,
 h5 {
     font: 900 1em var(--main-font);
     color: var(--primary-color);
+    margin: 40px auto;
     text-align: center;
     text-transform: none;
     letter-spacing: 0.01em;
