--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --primary-color: rgba(0, 0, 0, 0.5);
     --hover-color: rgba(0, 0, 0, 0.5);
     --gradient-start: red;
+    --gradient-center: green;
     --gradient-end: yellow;
     --box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
@@ -14,7 +15,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.5em;
     top: 15%;
-    background: linear-gradient(to right, let(--gradient-start), let(--gradient-end));
+    background: linear-gradient(to right, let(--gradient-start), let(--gradient-center), let(--gradient-end));
 }
 
 h1 {
@@ -54,21 +55,26 @@ h5:hover {
 .container {
     display: grid;
     gap: 50px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     margin: 0 auto;
 }
 
 .input-container1 {
-    justify-self: end;
+    grid-column: 1;
 }
 
 .input-container2 {
-    justify-self: start;
+    grid-column: 2;
+}
+
+.input-container3 {
+    grid-column: 3;
 }
 
 .color1,
-.color2 {
+.color2,
+.color3 {
     width: 100%;
     box-shadow: var(--box-shadow);
     border-radius: 5px;
