--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --hover-color: rgba(0, 0, 0, 0.5);
     --gradient-start: red;
     --gradient-center: green;
-    --gradient-end: yellow;
+    --gradient-end: blue;
     --box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -15,8 +15,14 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.5em;
     top: 15%;
-    background: linear-gradient(to right, let(--gradient-start), let(--gradient-center), let(--gradient-end));
-}
+    background: linear-gradient
+        (to right, 
+        let(--gradient-start), 
+        let(--gradient-center), 
+        let(--gradient-end)
+        );
+  }
+  
 
 h1 {
     font: 600 3.5em var(--main-font);
