--- a/style.css
+++ b/style.css
@@ -39,6 +39,16 @@ h2 {
     width: 100%;
 }
 
+h6 {
+    margin: auto;
+    letter-spacing: 0.5em;
+    width: 100%;
+    display: block;
+    font-size: 0.8em;
+    font-weight: bold;
+
+}
+
 h3,
 h4,
 h5 {
